# Gateway_Extender

./: CMakeLists.txt  README.md  app.cpp  starter.cpp  starter.h
commandPull/: commandHandler.cpp  commandHandler.h  commandPull.cpp  commandPull.h
commandService/: commandService.cpp  commandService.h  connectionClient.cpp  connectionClient.h
example_request/: getStatistics.json  getStatus.json  ping.json  setconfig.json  transmit.json
inc/: commandHandler.h  commandPull.h  commandReceiver.h  starter.h
interfaces/: interfaceAbstract.cpp  interfaceAbstract.h  interfaceSerial.cpp  interfaceSerial.h
settings/: settings.cpp  settings.h
src/: commandPull.cpp  commandReceiver.cpp  settings.cpp  starter.cpp
